--- a/styles/style.css
+++ b/styles/style.css
@@ -25,7 +25,7 @@
   position: relative;
   width: 30%;
   height: 100vh;
-  background-image: url("/image/leftbackgroundimage.jpg");
+  background-image: url("../image/leftbackgroundimage.jpg");
   background-size: cover;
 }
 .wrap .left .LogoContent {
@@ -38,7 +38,7 @@
   padding: 1rem 0;
 }
 .wrap .left .LogoContent .LogoImage {
-  background-image: url("/image/odinlined.svg");
+  background-image: url("../image/odinlined.svg");
   background-size: cover;
   width: 110px;
   height: 150px;
