--- a/styles/style.scss
+++ b/styles/style.scss
@@ -53,7 +53,7 @@
   .right {
     width: 70%;
     main {
-      padding: 13rem 0rem 1.5rem 2.5rem;
+      padding: 11rem 0rem 2rem 2.5rem;
       width: 100%;
       p {
         font-size: 2rem;
@@ -89,6 +89,7 @@
         }
       }
       .btn {
+        margin-top: 1rem;
         input {
           background-color: #596D48;
           border: none;
